--- a/assets/style.css
+++ b/assets/style.css
@@ -98,7 +98,7 @@ body {
   font-family: "Honk", system-ui, sans-serif;
   font-weight: 600;
   letter-spacing: .5px;
-  font-size: 3rem;
+  font-size: 4rem;
   line-height: 1.15;
 }
 
@@ -252,6 +252,7 @@ html[data-theme="light"] .theme-toggle [data-icon="moon"] { display: none; }
 .card h3 {
   margin: 0;
   font-size: 2rem;
+  line-height: 28px;
   font-weight: 600;
   font-family: "Honk", system-ui, sans-serif;
 }
